--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "bower": "1.3.8",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "jstz": "^2.1.1"
   },
   "engine": {
     "node": "0.12.x",
