--- a/bower.json
+++ b/bower.json
@@ -83,7 +83,8 @@
     "AngularJS-Toaster": "angularjs-toaster#^3.0.0",
     "angular-bootstrap": "^2.5.0",
     "jstz": "*",
-    "google-maps-utility-library-v3": "*"
+    "google-maps-utility-library-v3": "*",
+    "google-maps-utility-library-v3-markerwithlabel": "^1.1.10"
   },
   "resolutions": {
     "get-size": "~1.1.7",
